# university

2.24.2 - Solving optimization problems with search heuristics/: README.md
4I203 - Interaction homme-machine/: README.md
4I203 - Interaction homme-machine/IHM_TP1/: IHM_TP1.pro  mainwindow.cpp  mainwindow.h
4I203 - Interaction homme-machine/IHM_TP1/images/: Travaux Pratiques Qt #1.html
4I203 - Interaction homme-machine/IHM_TP2/: DrawingZone.cpp  DrawingZone.h  IHM_TP2.pro  Images.qrc  QComboBoxColor.cpp  QComboBoxColor.h  mainwindow.cpp  mainwindow.h
4I203 - Interaction homme-machine/IHM_TP3/: IHM_TP3.pro  mainwindow.cpp  strokedrawer.cpp  strokedrawer.h
4I500 - Algorithmique Avancée/: README.md
4I501 - Développement d'un Langage de Programmation/: README.md
4I502 - Ingénierie Logicielle/: README.md
4I503 - Analyse des Programmes et Sémantique/: README.md
4I503 - Analyse des Programmes et Sémantique/Projet/: rapport.tex
4I503 - Analyse des Programmes et Sémantique/Projet/VersionAST/: AST.h  ASTAdd.cpp  ASTAnd.cpp  ASTBlock.cpp  ASTBool.cpp  ASTConst.cpp  ASTDiv.cpp  ASTEcho.cpp  ASTEq.cpp  ASTIdent.cpp  ASTIf.cpp  ASTLt.cpp  ASTMul.cpp  ASTNot.cpp  ASTNum.cpp  ASTOr.cpp  ASTProg.cpp  ASTSet.cpp  ASTSub.cpp  ASTVar.cpp  ASTWhile.cpp  Makefile  TYPEBool.cpp  TYPEInt.cpp  TYPEVoid  analyzer.l  analyzer.y
4I503 - Analyse des Programmes et Sémantique/Projet/samples/: palindrome.aps  pgcdA.aps  prog0.aps  prog1.aps  prog2.aps  prog3.aps  prog4.aps  prog5.aps  puissance.aps  rac1.aps  (+5 more)
4I503 - Analyse des Programmes et Sémantique/tme1_2/: README.txt  tme1.txt  tme1essai2.l  tme1essai2.y
4I505 - Conception et Pratique de l'Algorithmique/: README.md
4I505 - Conception et Pratique de l'Algorithmique/CPAProject/: .Rapport.tex.swp  .Rapport.tex.swp.6DXSDY  .classpath  .project  input.points
4I507 - Programmation Concurrente, Réactive et Répartie/: README.md
4I800 - Logique et Représentations des Connaissances/: README.md
4I801 - Modèles et Langages Bases de Données Avancées/: README.md
5I550 - Analyse d'Algorithmes et Génération Aléatoire/: README.md
5I552 - Développement d'Applications Réticulaires/: README.md
5I553 - Paradigmes de Programmation Concurrente/: README.md
5I555 - Typage et Analyse Statique/: README.md
5I556 - Groupe de Recherche en Algorithmique/: README.md
IFT2125 - Introduction à l'algorithmique/: README.md
IFT2245 - Systèmes d'exploitation/: README.md
IFT2905 - Interfaces personne-machine/: README.md
IFT3225 - Technologie de l'Internet/: README.md
IFT3355 - Infographie/: README.md
IFT3355 - Infographie/TP1/: consolas.tga
IFT3355 - Infographie/TP1/src/: CMakeLists.txt
IFT3355 - Infographie/TP1/src/glbase/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  DummyEnemy.cpp  DummyEnemy.h  Projectile.cpp  Projectile.h  ThreeDObject.cpp  ThreeDObject.h  core.cpp  core.h  enemyship.cpp  enemyship.h  enemyshipbis.cpp  enemyshipbis.h  log.cpp  main.cpp  misc.cpp  scene.cpp  scene.h  spaceship.cpp  spaceship.h  texture.cpp  texture.h  tp1.cpp  tp1.h
IFT3355 - Infographie/TP1/src/glew/: CMakeLists.txt
IFT3355 - Infographie/TP1/src/glfw/: CMakeLists.txt  internal.h
IFT3355 - Infographie/TP3/: CubeMap.cpp  CubeMap.h  GLShader.cpp  GLShader.h  GLWidget.cpp  GLWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Material.cpp  Material.h  Ressources.qrc  TimeState.cpp  TimeState.h  flbase.pro
LI115 - Introduction à la programmation impérative en C/TME10/: EX1.c  EX3.c  EX4.c  EX5.c  td10_gregorien.c  td10_varglobales.c  tp10_echange_sujet.c
LI115 - Introduction à la programmation impérative en C/TME11/: EX1.c  EX4  EX4.c  tp11_debug.c  tp11_init.c
LI115 - Introduction à la programmation impérative en C/TME6/: EX1.c  EX2.c  EX3.c  EX4.c
LI115 - Introduction à la programmation impérative en C/TME9/: EX3  EX3.c  comptes.c  comptes.c.orig.c  comptesQuest9.c  td9exo2-3.c  td9exo2-4.c  td9exo2-6.c
LI213 - Types et structures de données/: README.md
LI214 - Structures discrètes/: README.md
LI215 - Programmation impérative et structures de données en C/: #abr.c#~  README.md  geom.c~
LI215 - Programmation impérative et structures de données en C/10_11_TME_SOLO/: Makefile~  abr.c~  abr.h  bonhomme.sch  geom.c  geom.c~  geom.h  mesicones.h  readme.txt  readme.txt~  schema.c  schema_callback.c  schema_callback.h  test.sch~  test_abr.c  tmesolo.c  tmesolo.c~
LI215 - Programmation impérative et structures de données en C/1_TD_TME/: fact.c~  main.c~
LI215 - Programmation impérative et structures de données en C/2_TD_TME/: Makefile  main_triBulle  main_triBulle.c  main_triBulleAmeliore.c  main_triRapide  tri_bulle.c  tri_rapide.c
LI215 - Programmation impérative et structures de données en C/3_TD_TME/: csvl.c  min_max_moy.c
LI215 - Programmation impérative et structures de données en C/4_TD_TME/: main  main.c  repertoire.c  repertoire.h
LI215 - Programmation impérative et structures de données en C/5_6_TD_TME/: Makefile  guimpe_callback.c  image.c  image.h  mainnoy.c  noyau.c  pgm_image.c  pile_image.c  trans_image.c  trans_image.h
LI215 - Programmation impérative et structures de données en C/7_8_TD_TME/: ecosys.c  ecosys.h  fonction.c  main1.c  main2.c
LI215 - Programmation impérative et structures de données en C/9_TD_TME/: Makefile  abr.c
LI215 - Programmation impérative et structures de données en C/Annales/: 2012S2.c  geom.c
LI216 - Algorithmique élémentaire/: README.md
LI217 - Calcul scientifique/: README.md
LI217 - Calcul scientifique/TP5/: archi.c
LI219 - Introduction à la multiprogrammation système/: README.md
LI221 - Machine et représentation/: README.md
LI221 - Machine et représentation/TP/: Q1.asm  Q2.asm  Q3.asm  rapport.txt~  rapport_Retail.txt
LI230 - Eléments de programmation par objets avec Java/: README.md
LI260 - Projet/: README.md
LI310 - Réseaux/: README.md
LI312 - Architecture logicielle et matérielle des ordinateurs/: README.md
LI314 - Programmation par objets/: README.md
LI330 - Programmation concurrente/: README.md
LI341 - Bases de données/: README.md
(+240 files in other folders)
